Fix build issues Fixes #1

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,7 @@ jobs:
     - name: build
       run: cmake --build .
     - name: test
-      run: ctest -C Release -T test --output-on-failure --timeout 10 --test-dir build/
+      run: ctest -C Release -T test --output-on-failure --timeout 10
     - name: conan create
       run: conan create .
       
