--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -21,5 +21,5 @@ jobs:
     - name: test
       run: ctest -C Release -T test --output-on-failure --timeout 10
     - name: conan create
-      run: conan create .
+      run: conan create . user/testing
       
