--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,7 +19,5 @@ jobs:
     - name: build
       run: cmake --build .
     - name: test
-      run: ctest -C Release -T test --output-on-failure --timeout 10 --test-dir build/
-    - name: conan create
-      run: conan create .
+      run: ctest -C Release -T test --output-on-failure --timeout 10
       
