State Change Handler Fires with Previous State Fixes #3 Fixes Allow on_state_change_handler to use calling connection #4

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Conan Install",
+            "label": "Conan Create",
             "type": "shell",
-            "command": "cd build && conan install ..",
+            "command": "conan create .",
             "problemMatcher": []
         },
         {
