--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -14,6 +14,8 @@ jobs:
     container: cblauvelt/cpp-builder-gcc10:latest
     steps:
     - uses: actions/checkout@v2
+    - name: conan install . -s compiler.cppstd=20 --build missing
+      run: cmake . -DCMAKE_BUILD_TYPE=Release -GNinja
     - name: configure
       run: cmake . -DCMAKE_BUILD_TYPE=Release -GNinja
     - name: build
