Disable workflow until conan is better integrated

--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,12 +1,12 @@
 name: C/C++ CI
 
 on:
-  push:
-    branches: [ main ]
-    # Publish semver tags as releases.
-    tags: ["v*.*.*"]
-  pull_request:
-    branches: [ main ]
+  # push:
+  #   branches: [ main ]
+  #   # Publish semver tags as releases.
+  #   tags: ["v*.*.*"]
+  # pull_request:
+  #   branches: [ main ]
 
 jobs:
   build:
