--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -31,6 +31,14 @@ target_include_directories(${CV_TEST} PRIVATE ${CMAKE_SOURCE_DIR})
 target_link_libraries(${CV_TEST} ${CONAN_LIBS})
 add_test(NAME ${CV_TEST} COMMAND $<TARGET_FILE:${CV_TEST}>)
 
+set(AL_TEST "latch_test")
+add_executable(${AL_TEST}
+        "src/util_tests/latch_test.cpp"
+)
+target_include_directories(${AL_TEST} PRIVATE ${CMAKE_SOURCE_DIR})
+target_link_libraries(${AL_TEST} ${CONAN_LIBS})
+add_test(NAME ${AL_TEST} COMMAND $<TARGET_FILE:${AL_TEST}>)
+
 set(CLIENT_TEST "client_test")
 add_executable(${CLIENT_TEST}
         "src/client_test/client_test.cpp"
@@ -55,6 +63,8 @@ add_executable(${CONNECTION_POOL_TEST}
         "src/connection_pool_test/connection_pool_test.cpp"
         "src/core/test_connection.cpp"
         "src/core/echo_server.cpp"
+        "src/core/unreliable_echo_server.cpp"
+        "src/core/unreliable_echo_session.cpp"
 )
 target_include_directories(${CONNECTION_POOL_TEST} PRIVATE ${CMAKE_SOURCE_DIR})
 target_link_libraries(${CONNECTION_POOL_TEST} ${CONAN_LIBS})
