Fix typo for trace logging

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -77,9 +77,9 @@ endif(BUILD_EXAMPLES)
 option(BUILD_TESTING "Build Unit Tests" ON)
 message("-- Testing is ${BUILD_TESTING}")
 if(BUILD_TESTING)
-    if(CPOOL_CPOOL_TRACE_LOGGING)
-        add_compile_definitions(CPOOL_CPOOL_TRACE_LOGGING)
-    endif(CPOOL_CPOOL_TRACE_LOGGING)
+    if(CPOOL_TRACE_LOGGING)
+        add_compile_definitions(CPOOL_TRACE_LOGGING)
+    endif(CPOOL_TRACE_LOGGING)
     
 	enable_testing()
     add_subdirectory(test)
